--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./mary.css">
+    <title>Lyrics for Christ</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div style="text-align:center; margin-top:40px; ">
